# ags_nlp_solver

./: .gitignore  .gitmodules  CMakeLists.txt  IndexAGS.sln  README.md
AGSTest/: 2d_func_cl.h  AGSTest.cpp  AGSTest.vcxproj  AGSTest.vcxproj.filters  GKLSClassTest.cpp  GKLSClassTest.h  GKLSClassTest.hpp  HolderConstEvaluate.cpp  HolderConstEvaluate.hpp  OptimizerFunctionWrappers.cpp  R= 0.000000 map_type= 10 local percent= 1, threadsNum= 99645655 .txt  R= 0.000000 map_type= 10 local percent=9936496.txt  R= 3.500000 map_type= 1 local percent=0.txt  R= 3.500000 map_type= 1 local percent=10.txt  R= 3.500000 map_type= 1 local percent=100.txt  R= 3.500000 map_type= 1 local percent=1000.txt  R= 3.500000 map_type= 1 local percent=50.txt  R= 3.500000 map_type= 1 local percent=6.txt  R= 3.500000 map_type= 1 local percent=70.txt  R= 3.500000 map_type= 1 local percent=8.txt  R= 3.500000 map_type= 1 local percent=9.txt  R= 3.500000 map_type= 1 local percent=90.txt  R= 3.500000 map_type= 3 local percent=0.txt  R= 3.500000 map_type= 3 local percent=10.txt  R= 3.800000 map_type= 1 local percent= 7, threadsNum= 4 .txt  R= 4.500000 map_type= 1 local percent= 0, threadsNum= 1 .txt  R= 4.500000 map_type= 1 local percent=0.txt  R= 4.500000 map_type= 3 local percent= 0, threadsNum= 1 .txt  R= 5.500000 map_type= 3 local percent= 0, threadsNum= 1 .txt  R= 9.000000 map_type= 1 local percent= 0, threadsNum= 1 .txt  ReadMe.txt  SequenceVisualizer.cpp  SequenceVisualizer.h  SequenceVisualizer.hpp  TestGrishaginClass.cpp  TestGrishaginClass.hpp  rnd_gen.cpp
IndexAGS/: CoreUtils.hpp  HookeJeevesLocalMethod.cpp  HookeJeevesLocalMethod.hpp  IndexAGS.vcxproj  IndexAGS.vcxproj.filters  LocalMethodCommon.hpp  Map.hpp  OptimizerAlgorithm — копия.cpp  OptimizerAlgorithm — копия.hpp  OptimizerAlgorithm.cpp  OptimizerAlgorithm.hpp  OptimizerAlgorithmUnconstrained.cpp  OptimizerAlgorithmUnconstrained.hpp  OptimizerCoreGlobal.hpp  OptimizerDataStructures.cpp  OptimizerDataStructures.hpp  OptimizerFunction.hpp  OptimizerMap.cpp  OptimizerMap.hpp  OptimizerMultiMap.cpp  OptimizerMultiMap.hpp  OptimizerQueue.cpp  OptimizerQueue.hpp  OptimizerResult.cpp  OptimizerResult.hpp  OptimizerSearchInformationStorage.cpp  OptimizerSearchSequence.cpp  OptimizerSearchSequence.hpp  OptimizerSolution.cpp  OptimizerSolution.hpp  OptimizerSpaceTransformation.cpp  OptimizerSpaceTransformation.hpp  OptimizerTask.cpp  OptimizerTask.hpp  ReadMe.txt  X_to_y.cpp  Y_to_x.cpp  dllmain.cpp  main.cpp  math_functions.cpp
OptimizerCore/include/: GKLSCoreGlobal.h  GKLSRandomGenerator.h  Map.h  VAGrisCoreGlobal.h
core/include/: OptimizerExperimentalMap.hpp  OptimizerMap.hpp  OptimizerResult.hpp  OptimizerSTLFunctionWrapper.hpp  OptimizerSearchInformationStorage.hpp  OptimizerSolution.hpp  OptimizerTask.hpp
core/src/: CoreUtils.cpp  HookeJeevesLocalMethod.cpp  OptimizerAlgorithmUnconstrained.cpp  OptimizerExperimentalMap.cpp  OptimizerMap.cpp  OptimizerResult.cpp  OptimizerSTLFunctionWrapper.cpp  OptimizerSearchSequence.cpp  OptimizerSolution.cpp  OptimizerTask.cpp  X_to_y.cpp  Y_to_x.cpp
experiments/: Simple.py  generate_report.py  plot_cmcs.py  report.csv  report.tex  report_template.tex  run_all.sh  run_clust_gklsh4d.sh  run_clust_gklsh4d_serg.sh  run_clust_gklss4d.sh  run_clust_gklss4d_serg.sh  run_fgrish.sh  run_gklsh2d.sh  run_gklsh3d.sh  run_gklsh4d.sh  run_gklsh4d_serg.sh  run_gklsh5d.sh  run_gklsh5d_serg.sh  run_gklss2d.sh  run_gklss3d.sh  run_gklss4d.sh  run_gklss4d_serg.sh  run_gklss5d.sh  run_gklss5d_serg.sh  set_vars.sh  solve_different_methods.py  solve_examin.py  start_serial_experiment_examin.py  update_plots.sh
experiments/ar_stability/: ags_ar_r8.json  ags_ar_short.json  ags_pure.json  ags_r6.json  stock.json
experiments/gklsh2d/: ags.json  ags_r.json  agsl_examin.json  crs.json  direct.json  directl.json  mlsl.json  scd.json  sda.json  shgo.json  simple.json  stogo.json
experiments/gklsh3d/: ags.json  ags_r.json  agsl_examin.json  crs.json  direct.json  directl.json  mlsl.json  scd.json  sda.json  shgo.json  stogo.json
experiments/gklsh4d/: ags.json  ags_r.json  agsl_examin.json  crs.json  direct.json  directl.json  mlsl.json  scd.json  sda.json  stogo.json
experiments/gklsh4d_serg/: ags.json  ags_r.json  agsl_examin.json  crs.json  direct.json  scd.json  sda.json  stogo.json
experiments/gklsh5d/: ags.json  ags_r.json  agsl_examin.json  crs.json  direct.json  directl.json  mlsl.json  scd.json  sda.json  stogo.json
experiments/gklsh5d_serg/: ags.json  ags_r.json  agsl_examin.json  crs.json  direct.json  directl.json  mlsl.json  scd.json  sda.json  stogo.json
experiments/gklss2d/: ags.json  ags_r.json  agsl_examin.json  crs.json  direct.json  directl.json  mlsl.json  scd.json  sda.json  shgo.json  simple.json  stogo.json
experiments/gklss3d/: ags.json  ags_r.json  agsl_examin.json  crs.json  direct.json  directl.json  mlsl.json  scd.json  sda.json  shgo.json  stogo.json
experiments/gklss4d/: ags.json  ags_r.json  agsl_examin.json  crs.json  direct.json  directl.json  mlsl.json  scd.json  sda.json  shgo.json  stogo.json
experiments/gklss4d_serg/: ags.json  ags_r.json  agsl_examin.json  directl.json  mlsl.json  scd.json  sda.json  stogo.json
experiments_serg_scheme/: report.csv  run_gklsh2d.sh  run_gklsh4d.sh  run_gklsh5d.sh  run_gklss2d.sh  run_gklss4d.sh  run_gklss5d.sh
overall_report/: report.tex  tab_test.py
sample/: AGSTest.cpp  CMakeLists.txt  GKLSClassTest.cpp  GKLSClassTest.hpp  GKLSFunction.h  OptimizerFunctionWrappers.hpp  TestGrishaginClass.hpp  TestTaskFactory.cpp  TestTaskFactory.hpp  VAGrisFunction.h  gkls.cpp  gkls.h  main.cpp  rnd_gen.h
samples/: CMakeLists.txt  Simple.py  constrained.cpp  solve_constrained.cpp  solve_set.cpp
samples/python/: plot_cmcs.py  solve_constrained.py  solve_different_methods.py  solve_set.py
solver/: CMakeLists.txt
solver/bindings_src/: py_bindings.cpp
solver/include/: data_types.hpp  evolvent.hpp  intervals_queue.hpp  local_optimizer.hpp  minmaxheap.hpp  solver.hpp
solver/src/: evolvent.cpp  intervals_queue.cpp  local_optimizer.cpp  solver.cpp
(+88 files in other folders)
